--- a/gcc/config/s390/s390.md
+++ b/gcc/config/s390/s390.md
@@ -832,10 +832,13 @@
         (match_operand:TI 1 "memory_operand" ""))]
   "TARGET_64BIT && reload_completed
    && !s_operand (operands[1], VOIDmode)"
-  [(set (match_dup 2) (match_dup 3))
-   (set (match_dup 0) (mem:TI (match_dup 2)))]
-  "operands[2] = operand_subword (operands[0], 1, 0, TImode);
-   operands[3] = legitimize_la_operand (XEXP (operands[1], 0));")
+  [(set (match_dup 0) (match_dup 1))]
+  "
+{
+  rtx addr = operand_subword (operands[0], 1, 0, TImode);
+  s390_load_address (addr, XEXP (operands[1], 0));
+  operands[1] = replace_equiv_address (operands[1], addr);
+}")
 
 ;
 ; movdi instruction pattern(s).
@@ -981,10 +984,13 @@
    && !fp_operand (operands[0], VOIDmode)
    && !fp_operand (operands[1], VOIDmode)
    && !s_operand (operands[1], VOIDmode)"
-  [(set (match_dup 2) (match_dup 3))
-   (set (match_dup 0) (mem:DI (match_dup 2)))]
-  "operands[2] = operand_subword (operands[0], 1, 0, DImode);
-   operands[3] = legitimize_la_operand (XEXP (operands[1], 0));")
+  [(set (match_dup 0) (match_dup 1))]
+  "
+{
+  rtx addr = operand_subword (operands[0], 1, 0, DImode);
+  s390_load_address (addr, XEXP (operands[1], 0));
+  operands[1] = replace_equiv_address (operands[1], addr);
+}")
 
 ;
 ; movsi instruction pattern(s).
@@ -1254,10 +1260,13 @@
    && !fp_operand (operands[0], VOIDmode)
    && !fp_operand (operands[1], VOIDmode)
    && !s_operand (operands[1], VOIDmode)"
-  [(set (match_dup 2) (match_dup 3))
-   (set (match_dup 0) (mem:DI (match_dup 2)))]
-  "operands[2] = operand_subword (operands[0], 1, 0, DFmode);
-   operands[3] = legitimize_la_operand (XEXP (operands[1], 0));")
+  [(set (match_dup 0) (match_dup 1))]
+  "
+{
+  rtx addr = operand_subword (operands[0], 1, 0, DFmode);
+  s390_load_address (addr, XEXP (operands[1], 0));
+  operands[1] = replace_equiv_address (operands[1], addr);
+}")
 
 ;
 ; movsf instruction pattern(s).
@@ -1503,172 +1512,31 @@
 ;;
 
 ;
-; movstrdi instruction pattern(s).
+; movstrM instruction pattern(s).
 ;
 
 (define_expand "movstrdi"
-   [(set (match_operand:BLK 0 "general_operand" "")
-         (match_operand:BLK 1 "general_operand" ""))
-    (use (match_operand:DI 2 "general_operand" ""))
-    (match_operand 3 "" "")]
-    "TARGET_64BIT"
-    "
-{
-  rtx addr0, addr1;
-
-  addr0 = force_operand (XEXP (operands[0], 0), NULL_RTX);
-  addr1 = force_operand (XEXP (operands[1], 0), NULL_RTX);
-
-  if (GET_CODE (operands[2]) == CONST_INT && INTVAL (operands[2]) <= 256)
-    {
-      operands[0] = change_address (operands[0], VOIDmode, addr0);
-      operands[1] = change_address (operands[1], VOIDmode, addr1);
-      operands[2] = GEN_INT (INTVAL (operands[2]) - 1);
-
-      emit_insn (gen_movstrdi_short (operands[0], operands[1], operands[2]));
-      DONE;
-    } 
-  else 
-    {
-      if (TARGET_MVCLE) 
-	{
-          /* implementation suggested by  Richard Henderson <rth@cygnus.com> */
-          rtx reg0 = gen_reg_rtx (TImode);
-          rtx reg1 = gen_reg_rtx (TImode);
-          rtx len = operands[2];
-
-          if (! CONSTANT_P (len))
-            len = force_reg (DImode, len);
-
-          /* Load up the address+length pairs.  */
-
-          emit_move_insn (gen_highpart (DImode, reg0), addr0);
-          emit_move_insn (gen_lowpart (DImode, reg0), len);
-
-          emit_move_insn (gen_highpart (DImode, reg1), addr1);
-          emit_move_insn (gen_lowpart (DImode, reg1), len);
-
-          /* MOVE */
-          emit_insn (gen_movstrdi_64 (reg0, reg1, reg0, reg1));
-          DONE;
-        }
-      else
-	{
-          rtx label1 = gen_label_rtx ();
-          rtx label2 = gen_label_rtx ();
-          rtx reg0, reg1, len, blocks;
-      		
-          reg0 = gen_reg_rtx (DImode);
-          reg1 = gen_reg_rtx (DImode);
-          len = gen_reg_rtx (DImode);
-          blocks = gen_reg_rtx (DImode);
-
-          emit_move_insn (len, operands[2]);	
-          emit_insn (gen_cmpdi (len, const0_rtx));
-          emit_jump_insn (gen_beq (label1));
-          emit_move_insn (reg0, addr0);
-          emit_move_insn (reg1, addr1);
-          emit_insn (gen_adddi3 (len, len, constm1_rtx));
-          emit_insn (gen_ashrdi3 (blocks, len, GEN_INT (8)));
-          emit_insn (gen_cmpdi (blocks, const0_rtx));
-          emit_jump_insn (gen_beq (label2));
-          emit_insn (gen_movstrdi_long (reg0, reg1, reg0, reg1, blocks, blocks));
-          emit_label (label2); 
-	  operands[0] = change_address (operands[0], VOIDmode, reg0);
-	  operands[1] = change_address (operands[1], VOIDmode, reg1);
-          emit_insn (gen_movstrdi_short (operands[0], operands[1], len));
-          emit_label (label1); 
-          DONE;	   
-       }	 
-    }
-}")
-
-;
-; movstrsi instruction pattern(s).
-;
+  [(set (match_operand:BLK 0 "memory_operand" "")
+        (match_operand:BLK 1 "memory_operand" ""))
+   (use (match_operand:DI 2 "general_operand" ""))
+   (match_operand 3 "" "")]
+  "TARGET_64BIT"
+  "s390_expand_movstr (operands[0], operands[1], operands[2]); DONE;")
 
 (define_expand "movstrsi"
-   [(set (match_operand:BLK 0 "general_operand" "")
-         (match_operand:BLK 1 "general_operand" ""))
-    (use (match_operand:SI 2 "general_operand" ""))
-    (match_operand 3 "" "")]
-    "!TARGET_64BIT"
-    "
-{
-  rtx addr0 = force_operand (XEXP (operands[0], 0), NULL_RTX);
-  rtx addr1 = force_operand (XEXP (operands[1], 0), NULL_RTX);
-
-  if (GET_CODE (operands[2]) == CONST_INT && INTVAL (operands[2]) <= 256)
-    {
-      operands[0] = change_address (operands[0], VOIDmode, addr0);
-      operands[1] = change_address (operands[1], VOIDmode, addr1);
-      operands[2] = GEN_INT (INTVAL (operands[2]) - 1);
-
-      emit_insn (gen_movstrsi_short (operands[0], operands[1], operands[2]));
-      DONE;
-    } 
-  else 
-    {
-      if (TARGET_MVCLE) 
-	{
-          /* implementation suggested by  Richard Henderson <rth@cygnus.com> */
-          rtx reg0 = gen_reg_rtx (DImode);
-          rtx reg1 = gen_reg_rtx (DImode);
-          rtx len = operands[2];
-
-
-          if (! CONSTANT_P (len))
-            len = force_reg (SImode, len);
-
-          /* Load up the address+length pairs.  */
-
-          emit_move_insn (gen_highpart (SImode, reg0), addr0);
-          emit_move_insn (gen_lowpart (SImode, reg0), len);
-
-          emit_move_insn (gen_highpart (SImode, reg1), addr1);
-          emit_move_insn (gen_lowpart (SImode, reg1), len);
-
-          /* MOVE */
-          emit_insn (gen_movstrsi_31 (reg0, reg1, reg0, reg1));
-          DONE;
-        }
-      else
-	{
-          rtx label1 = gen_label_rtx ();
-          rtx label2 = gen_label_rtx ();
-          rtx reg0, reg1, len, blocks;
-      		
-          reg0 = gen_reg_rtx (SImode);
-          reg1 = gen_reg_rtx (SImode);
-	  len = gen_reg_rtx (SImode); 
-	  blocks = gen_reg_rtx (SImode); 
-	  
-	  emit_move_insn (len, operands[2]);
-          emit_insn (gen_cmpsi (len, const0_rtx));
-          emit_jump_insn (gen_beq (label1));
-          emit_move_insn (reg0, addr0);
-          emit_move_insn (reg1, addr1);
-          emit_insn (gen_addsi3 (len, len, constm1_rtx));
-          emit_insn (gen_ashrsi3 (blocks, len, GEN_INT (8)));
-          emit_insn (gen_cmpsi (blocks, const0_rtx));
-          emit_jump_insn (gen_beq (label2));
-          emit_insn (gen_movstrsi_long (reg0, reg1, reg0, reg1, blocks, blocks));
-          emit_label (label2); 
-	  operands[0] = change_address (operands[0], VOIDmode, reg0);
-	  operands[1] = change_address (operands[1], VOIDmode, reg1);
-          emit_insn (gen_movstrsi_short (operands[0], operands[1], len));
-          emit_label (label1); 
-          DONE;	   
-       }	 
-    }
-}")
+  [(set (match_operand:BLK 0 "memory_operand" "")
+        (match_operand:BLK 1 "memory_operand" ""))
+   (use (match_operand:SI 2 "general_operand" ""))
+   (match_operand 3 "" "")]
+  ""
+  "s390_expand_movstr (operands[0], operands[1], operands[2]); DONE;")
 
 ; Move a block that is up to 256 bytes in length.
 ; The block length is taken as (operands[2] % 256) + 1.
 
-(define_insn "movstrdi_short"
-  [(set (match_operand:BLK 0 "s_operand" "=Q,Q")
-        (match_operand:BLK 1 "s_operand" "Q,Q"))
+(define_insn "movstr_short_64"
+  [(set (match_operand:BLK 0 "memory_operand" "=Q,Q")
+        (match_operand:BLK 1 "memory_operand" "Q,Q"))
    (use (match_operand:DI 2 "nonmemory_operand" "n,a"))
    (clobber (match_scratch:DI 3 "=X,&a"))]
   "TARGET_64BIT"
@@ -1689,12 +1557,13 @@
     }
 }"
   [(set_attr "op_type" "SS,NN")
+   (set_attr "type"    "cs,cs")
    (set_attr "atype"   "mem,mem")
    (set_attr "length"  "*,14")])
 
-(define_insn "movstrsi_short"
-  [(set (match_operand:BLK 0 "s_operand" "=Q,Q")
-        (match_operand:BLK 1 "s_operand" "Q,Q"))
+(define_insn "movstr_short_31"
+  [(set (match_operand:BLK 0 "memory_operand" "=Q,Q")
+        (match_operand:BLK 1 "memory_operand" "Q,Q"))
    (use (match_operand:SI 2 "nonmemory_operand" "n,a"))
    (clobber (match_scratch:SI 3 "=X,&a"))]
   "!TARGET_64BIT"
@@ -1715,64 +1584,13 @@
     }
 }"
   [(set_attr "op_type" "SS,NN")
+   (set_attr "type"    "cs,cs")
    (set_attr "atype"   "mem,mem")
    (set_attr "length"  "*,14")])
 
-; Move a block that is a multiple of 256 bytes in length
+; Move a block of arbitrary length.
 
-(define_insn "movstrdi_long"
-  [(set (match_operand:DI 4 "register_operand" "=d")
-        (const_int 0))
-   (set (match_operand:DI 0 "register_operand" "=a")
-        (plus:DI (match_operand:DI 2 "register_operand" "0")
-                 (ashift:DI (match_operand:DI 5 "register_operand" "4")
-                            (const_int 8))))
-   (set (match_operand:DI 1 "register_operand" "=a")
-        (plus:DI (match_operand:DI 3 "register_operand" "1")
-                 (ashift:DI (match_dup 5) (const_int 8))))
-   (set (mem:BLK (match_dup 2))
-        (mem:BLK (match_dup 3)))
-   (use (match_dup 5))]
-  "TARGET_64BIT"
-  "*
-{
-  output_asm_insn (\"mvc\\t0(256,%0),0(%1)\", operands);
-  output_asm_insn (\"la\\t%0,256(%0)\", operands);
-  output_asm_insn (\"la\\t%1,256(%1)\", operands);
-  return \"brct\\t%4,.-14\";
-}"
-  [(set_attr "op_type" "NN")
-   (set_attr "atype"   "mem")
-   (set_attr "length"  "18")])
-
-(define_insn "movstrsi_long"
-  [(set (match_operand:SI 4 "register_operand" "=d")
-        (const_int 0))
-   (set (match_operand:SI 0 "register_operand" "=a")
-        (plus:SI (match_operand:SI 2 "register_operand" "0")
-                 (ashift:SI (match_operand:SI 5 "register_operand" "4")
-                            (const_int 8))))
-   (set (match_operand:SI 1 "register_operand" "=a")
-        (plus:SI (match_operand:SI 3 "register_operand" "1")
-                 (ashift:SI (match_dup 5) (const_int 8))))
-   (set (mem:BLK (match_dup 2))
-        (mem:BLK (match_dup 3)))
-   (use (match_dup 5))]
-  "!TARGET_64BIT"
-  "*
-{
-  output_asm_insn (\"mvc\\t0(256,%0),0(%1)\", operands);
-  output_asm_insn (\"la\\t%0,256(%0)\", operands);
-  output_asm_insn (\"la\\t%1,256(%1)\", operands);
-  return \"brct\\t%4,.-14\";
-}"
-  [(set_attr "op_type" "NN")
-   (set_attr "atype"   "mem")
-   (set_attr "length"  "18")])
-
-; Move a block that is larger than 255 bytes in length.
-
-(define_insn "movstrdi_64"
+(define_insn "movstr_long_64"
   [(set (match_operand:TI 0 "register_operand" "=d")
         (ashift:TI (plus:TI (match_operand:TI 2 "register_operand" "0")
                             (lshiftrt:TI (match_dup 2) (const_int 64)))
@@ -1787,10 +1605,11 @@
   "TARGET_64BIT"
   "mvcle\\t%0,%1,0\;jo\\t.-4"
   [(set_attr "op_type" "NN")
+   (set_attr "type"    "vs")
    (set_attr "atype"   "mem")
    (set_attr "length"  "8")])
 
-(define_insn "movstrsi_31"
+(define_insn "movstr_long_31"
   [(set (match_operand:DI 0 "register_operand" "=d")
         (ashift:DI (plus:DI (match_operand:DI 2 "register_operand" "0")
                             (lshiftrt:DI (match_dup 2) (const_int 32)))
@@ -1804,112 +1623,93 @@
    (clobber (reg:CC 33))]
   "!TARGET_64BIT"
   "mvcle\\t%0,%1,0\;jo\\t.-4"
-   [(set_attr "op_type" "NN")
-    (set_attr "atype" "mem")
-    (set_attr "length"  "8")])
+  [(set_attr "op_type" "NN")
+   (set_attr "type"    "vs")
+   (set_attr "atype"   "mem")
+   (set_attr "length"  "8")])
 
 ;
-; clrstrdi instruction pattern(s).
+; clrstrM instruction pattern(s).
 ;
 
 (define_expand "clrstrdi"
-  [(set (match_operand:BLK 0 "general_operand" "")
+  [(set (match_operand:BLK 0 "memory_operand" "")
         (const_int 0))
    (use (match_operand:DI 1 "general_operand" ""))
    (match_operand 2 "" "")]
   "TARGET_64BIT"
-  "
-{
-   rtx addr = force_operand (XEXP (operands[0], 0), NULL_RTX);
-
-   operands[0] = change_address (operands[0], VOIDmode, addr);
-
-   if (GET_CODE (operands[1]) == CONST_INT && INTVAL (operands[1]) < 256)
-     {
-        emit_insn (gen_clrstrsico (operands[0], operands[1]));
-        DONE;
-     }
-   else
-     {
-      rtx reg0 = gen_reg_rtx (TImode);
-      rtx reg1 = gen_reg_rtx (TImode);
-      rtx len = operands[1];
-
-      if (! CONSTANT_P (len))
-          len = force_reg (DImode, len);
-
-      /* Load up the address+length pairs.  */
-
-      emit_move_insn (gen_highpart (DImode, reg0), addr);
-      emit_move_insn (gen_lowpart (DImode, reg0), len);
-
-      emit_move_insn (gen_lowpart (DImode, reg1), const0_rtx);
- 
-      /* Clear! */
-      emit_insn (gen_clrstrsi_64 (reg0, reg1, reg0));
-      DONE;	
-     }
-}")
-
-;
-; clrstrsi instruction pattern(s).
-;
+  "s390_expand_clrstr (operands[0], operands[1]); DONE;")
 
 (define_expand "clrstrsi"
-  [(set (match_operand:BLK 0 "general_operand" "")
+  [(set (match_operand:BLK 0 "memory_operand" "")
         (const_int 0))
    (use (match_operand:SI 1 "general_operand" ""))
    (match_operand 2 "" "")]
-   "!TARGET_64BIT"
-   "
-{
-   rtx addr = force_operand (XEXP (operands[0], 0), NULL_RTX);
-
-   operands[0] = change_address (operands[0], VOIDmode, addr);
-
-   if (GET_CODE (operands[1]) == CONST_INT && INTVAL (operands[1]) < 256)
-     {
-        emit_insn (gen_clrstrsico (operands[0], operands[1]));
-        DONE;
-     }
-   else
-     {
-      rtx reg0 = gen_reg_rtx (DImode);
-      rtx reg1 = gen_reg_rtx (DImode);
-      rtx len = operands[1];
-
-      if (! CONSTANT_P (len))
-          len = force_reg (SImode, len);
-
-      /* Load up the address+length pairs.  */
-
-      emit_move_insn (gen_highpart (SImode, reg0), addr);
-      emit_move_insn (gen_lowpart (SImode, reg0), len);
-
-      emit_move_insn (gen_lowpart (SImode, reg1), const0_rtx);
- 
-      /* CLear! */
-      emit_insn (gen_clrstrsi_31 (reg0, reg1, reg0));
-      DONE;	
-     }
-}")
-
-; Clear memory with length less than 256 bytes 
-
-(define_insn "clrstrsico"
-  [(set (match_operand:BLK 0 "s_operand" "=Q")
-        (const_int 0))
-   (use (match_operand 1 "immediate_operand" "I"))
-   (clobber (reg:CC 33))]
   ""
-  "xc\\t%O0(%1,%R0),%0"	
-  [(set_attr "op_type" "RS")
-   (set_attr "type"    "cs")
-   (set_attr "atype"   "mem")])
+  "s390_expand_clrstr (operands[0], operands[1]); DONE;")
 
-; Clear memory with length greater 256 bytes or lenght not constant
+; Clear a block that is up to 256 bytes in length.
+; The block length is taken as (operands[2] % 256) + 1.
 
-(define_insn "clrstrsi_64"
+(define_insn "clrstr_short_64"
+  [(set (match_operand:BLK 0 "memory_operand" "=Q,Q")
+        (const_int 0))
+   (use (match_operand:DI 1 "nonmemory_operand" "n,a"))
+   (clobber (match_scratch:DI 2 "=X,&a"))
+   (clobber (reg:CC 33))]
+  "TARGET_64BIT"
+  "*
+{
+  switch (which_alternative)
+    {
+      case 0:
+	return \"xc\\t%O0(%b1+1,%R0),%0\";
+
+      case 1:
+	output_asm_insn (\"bras\\t%2,.+10\", operands);
+	output_asm_insn (\"xc\\t%O0(1,%R0),%0\", operands);
+	return \"ex\\t%1,0(%2)\";
+
+      default:
+        abort ();
+    }
+}"
+  [(set_attr "op_type" "SS,NN")
+   (set_attr "type"    "cs,cs")
+   (set_attr "atype"   "mem,mem")
+   (set_attr "length"  "*,14")])
+
+(define_insn "clrstr_short_31"
+  [(set (match_operand:BLK 0 "memory_operand" "=Q,Q")
+        (const_int 0))
+   (use (match_operand:SI 1 "nonmemory_operand" "n,a"))
+   (clobber (match_scratch:SI 2 "=X,&a"))
+   (clobber (reg:CC 33))]
+  "!TARGET_64BIT"
+  "*
+{
+  switch (which_alternative)
+    {
+      case 0:
+	return \"xc\\t%O0(%b1+1,%R0),%0\";
+
+      case 1:
+	output_asm_insn (\"bras\\t%2,.+10\", operands);
+	output_asm_insn (\"xc\\t%O0(1,%R0),%0\", operands);
+	return \"ex\\t%1,0(%2)\";
+
+      default:
+        abort ();
+    }
+}"
+  [(set_attr "op_type" "SS,NN")
+   (set_attr "type"    "cs,cs")
+   (set_attr "atype"   "mem,mem")
+   (set_attr "length"  "*,14")])
+
+; Clear a block of arbitrary length.
+
+(define_insn "clrstr_long_64"
   [(set (match_operand:TI 0 "register_operand" "=d")
         (ashift:TI (plus:TI (match_operand:TI 2 "register_operand" "0")
                             (lshiftrt:TI (match_dup 2) (const_int 64)))
@@ -1925,7 +1725,7 @@
    (set_attr "type"    "vs")
    (set_attr "length"  "8")])
 
-(define_insn "clrstrsi_31"
+(define_insn "clrstr_long_31"
   [(set (match_operand:DI 0 "register_operand" "=d")
         (ashift:DI (plus:DI (match_operand:DI 2 "register_operand" "0")
                             (lshiftrt:DI (match_dup 2) (const_int 32)))
@@ -1942,157 +1742,91 @@
    (set_attr "length"  "8")])
 
 ;
-; cmpstrdi instruction pattern(s).
+; cmpstrM instruction pattern(s).
 ;
 
 (define_expand "cmpstrdi"
-   [(set (match_operand:DI 0 "register_operand" "")
-         (compare:DI (match_operand:BLK 1 "general_operand" "")
-                  (match_operand:BLK 2 "general_operand" "") ) )
-             (use (match_operand:DI 3  "general_operand" ""))
-             (use (match_operand:DI 4  "" ""))]
-   "TARGET_64BIT"
-   "
-{
-  rtx addr0, addr1;
-
-  /* for pre/post increment */
-  operands[1] = protect_from_queue (operands[1], 0);
-  operands[2] = protect_from_queue (operands[2], 0);
-  operands[3] = protect_from_queue (operands[3], 0);
-
-  addr0 = force_operand (XEXP (operands[1], 0), NULL_RTX);
-  addr1 = force_operand (XEXP (operands[2], 0), NULL_RTX);
-
-  if (GET_CODE (operands[3]) == CONST_INT && INTVAL (operands[3]) < 256) 
-    {
-      if (INTVAL (operands[3]) == 0) {
-	emit_move_insn (operands[0], operands[3]);
-	DONE;
-      }
-
-      operands[1] = change_address (operands[1], VOIDmode, addr0);
-      operands[2] = change_address (operands[2], VOIDmode, addr1);
-
-      emit_insn (gen_cmpstr_const (operands[1], operands[2], operands[3]));
-      emit_insn (gen_cmpint_di (operands[0]));
-      DONE;
-    }
-  else
-    {	
-      /* implementation suggested by  Richard Henderson <rth@cygnus.com> */
-      rtx reg0 = gen_reg_rtx (TImode);
-      rtx reg1 = gen_reg_rtx (TImode);
-      rtx len = operands[3];
-
-      if (! CONSTANT_P (len))
-          len = force_reg (DImode, len);
-
-      /* Load up the address+length pairs.  */
-      emit_move_insn (gen_highpart (DImode, reg0), addr0); 
-      emit_move_insn (gen_lowpart (DImode, reg0), len);
-
-      emit_move_insn (gen_highpart (DImode, reg1), addr1);
-      emit_move_insn (gen_lowpart (DImode, reg1), len);
-
-      /* Compare! */
-      emit_insn (gen_cmpstr_64 (reg0, reg1, reg0, reg1));
-      emit_insn (gen_cmpint_di (operands[0]));
-      DONE;
-    }
-}")
-
-;
-; cmpstrsi instruction pattern(s).
-;
+  [(set (match_operand:DI 0 "register_operand" "")
+        (compare:DI (match_operand:BLK 1 "memory_operand" "")
+                    (match_operand:BLK 2 "memory_operand" "") ) )
+   (use (match_operand:DI 3 "general_operand" ""))
+   (use (match_operand:DI 4 "" ""))]
+  "TARGET_64BIT"
+  "s390_expand_cmpstr (operands[0], operands[1], 
+                       operands[2], operands[3]); DONE;")
 
 (define_expand "cmpstrsi"
-   [(set (match_operand:SI 0 "register_operand" "")
-         (compare:SI (match_operand:BLK 1 "general_operand" "")
-                  (match_operand:BLK 2 "general_operand" "") ) )
-             (use (match_operand:SI 3  "general_operand" ""))
-             (use (match_operand:SI 4  "" ""))]
-   ""
-   "
-{
-  rtx addr0, addr1;
+  [(set (match_operand:SI 0 "register_operand" "")
+        (compare:SI (match_operand:BLK 1 "memory_operand" "")
+                    (match_operand:BLK 2 "memory_operand" "") ) )
+   (use (match_operand:SI 3 "general_operand" ""))
+   (use (match_operand:SI 4 "" ""))]
+  ""
+  "s390_expand_cmpstr (operands[0], operands[1], 
+                       operands[2], operands[3]); DONE;")
 
-  /* for pre/post increment */
-  operands[1] = protect_from_queue (operands[1], 0);
-  operands[2] = protect_from_queue (operands[2], 0);
-  operands[3] = protect_from_queue (operands[3], 0);
+; Compare a block that is up to 256 bytes in length.
+; The block length is taken as (operands[2] % 256) + 1.
 
-  addr0 = force_operand (XEXP (operands[1], 0), NULL_RTX);
-  addr1 = force_operand (XEXP (operands[2], 0), NULL_RTX);
-
-  if (GET_CODE (operands[3]) == CONST_INT && INTVAL (operands[3]) < 256) 
-    {
-      if (INTVAL (operands[3]) == 0) {
-	emit_move_insn (operands[0], operands[3]);
-	DONE;
-      }
-
-      operands[1] = change_address (operands[1], VOIDmode, addr0);
-      operands[2] = change_address (operands[2], VOIDmode, addr1);
-
-      emit_insn (gen_cmpstr_const (operands[1], operands[2], operands[3]));
-      emit_insn (gen_cmpint_si (operands[0]));
-      DONE;
-    }
-  else
-    {	
-      /* implementation suggested by  Richard Henderson <rth@cygnus.com> */
-      rtx reg0, reg1;
-      rtx len = operands[3];
-
-      if (TARGET_64BIT)
-	{
-	  reg0 = gen_reg_rtx (TImode);
-	  reg1 = gen_reg_rtx (TImode);
-	}
-      else
-	{
-	  reg0 = gen_reg_rtx (DImode);
-	  reg1 = gen_reg_rtx (DImode);
-        }  
-
-      if (! CONSTANT_P (len))
-          len = force_reg (Pmode, len);
-
-      /* Load up the address+length pairs.  */
-      emit_move_insn (gen_highpart (Pmode, reg0), addr0); 
-      emit_move_insn (gen_lowpart (Pmode, reg0), len);
-
-      emit_move_insn (gen_highpart (Pmode, reg1), addr1);
-      emit_move_insn (gen_lowpart (Pmode, reg1), len);
-
-      /* Compare! */
-      if (TARGET_64BIT) 
-          emit_insn (gen_cmpstr_64 (reg0, reg1, reg0, reg1));
-      else
-          emit_insn (gen_cmpstr_31 (reg0, reg1, reg0, reg1));
-
-      emit_insn (gen_cmpint_si (operands[0]));
-      DONE;
-    }
-}")
-
-; Compare a block that is less than 256 bytes in length.
-
-(define_insn "cmpstr_const"
+(define_insn "cmpstr_short_64"
   [(set (reg:CCS 33)
-        (compare:CCS (match_operand:BLK 0 "s_operand" "Q")
-                     (match_operand:BLK 1 "s_operand" "Q")))
-   (use (match_operand 2 "immediate_operand" "I"))]
-  "(unsigned) INTVAL (operands[2]) < 256"
-  "clc\\t%O0(%c2,%R0),%1"
-  [(set_attr "op_type" "SS")
-   (set_attr "atype"   "mem")
-   (set_attr "type"    "cs")])
+        (compare:CCS (match_operand:BLK 0 "memory_operand" "=Q,Q")
+                     (match_operand:BLK 1 "memory_operand" "Q,Q")))
+   (use (match_operand:DI 2 "nonmemory_operand" "n,a"))
+   (clobber (match_scratch:DI 3 "=X,&a"))]
+  "TARGET_64BIT"
+  "*
+{
+  switch (which_alternative)
+    {
+      case 0:
+	return \"clc\\t%O0(%b2+1,%R0),%1\";
 
-; Compare a block that is larger than 255 bytes in length.
+      case 1:
+	output_asm_insn (\"bras\\t%3,.+10\", operands);
+	output_asm_insn (\"clc\\t%O0(1,%R0),%1\", operands);
+	return \"ex\\t%2,0(%3)\";
 
-(define_insn "cmpstr_64"
+      default:
+        abort ();
+    }
+}"
+  [(set_attr "op_type" "SS,NN")
+   (set_attr "type"    "cs,cs")
+   (set_attr "atype"   "mem,mem")
+   (set_attr "length"  "*,14")])
+
+(define_insn "cmpstr_short_31"
+  [(set (reg:CCS 33)
+        (compare:CCS (match_operand:BLK 0 "memory_operand" "=Q,Q")
+                     (match_operand:BLK 1 "memory_operand" "Q,Q")))
+   (use (match_operand:SI 2 "nonmemory_operand" "n,a"))
+   (clobber (match_scratch:SI 3 "=X,&a"))]
+  "!TARGET_64BIT"
+  "*
+{
+  switch (which_alternative)
+    {
+      case 0:
+	return \"clc\\t%O0(%b2+1,%R0),%1\";
+
+      case 1:
+	output_asm_insn (\"bras\\t%3,.+10\", operands);
+	output_asm_insn (\"clc\\t%O0(1,%R0),%1\", operands);
+	return \"ex\\t%2,0(%3)\";
+
+      default:
+        abort ();
+    }
+}"
+  [(set_attr "op_type" "SS,NN")
+   (set_attr "type"    "cs,cs")
+   (set_attr "atype"   "mem,mem")
+   (set_attr "length"  "*,14")])
+
+; Compare a block of arbitrary length.
+
+(define_insn "cmpstr_long_64"
   [(clobber (match_operand:TI 0 "register_operand" "=d"))
    (clobber (match_operand:TI 1 "register_operand" "=d"))
    (set (reg:CCS 33)
@@ -2106,7 +1840,7 @@
    (set_attr "atype"   "mem")
    (set_attr "type"    "vs")])
 
-(define_insn "cmpstr_31"
+(define_insn "cmpstr_long_31"
   [(clobber (match_operand:DI 0 "register_operand" "=d"))
    (clobber (match_operand:DI 1 "register_operand" "=d"))
    (set (reg:CCS 33)
@@ -3367,6 +3101,16 @@
   [(set (match_operand:SI 0 "register_operand" "=d")
         (match_operand:QI 1 "address_operand" "p"))]
   "legitimate_la_operand_p (operands[1])"
+  "la\\t%0,%a1"
+  [(set_attr "op_type"  "RX")
+   (set_attr "atype"    "mem")
+   (set_attr "type"     "la")])
+
+(define_insn "force_la_31"
+  [(set (match_operand:SI 0 "register_operand" "=d")
+        (match_operand:QI 1 "address_operand" "p"))
+   (use (const_int 0))]
+  "!TARGET_64BIT"
   "la\\t%0,%a1"
   [(set_attr "op_type"  "RX")
    (set_attr "atype"    "mem")
