re PR c++/7015 (certain __asm__ constructs rejected)
cp:
2002-09-16  Nathan Sidwell  <nathan@codesourcery.com>

	PR c++/7015
	* semantic.c (finish_asm_stmt): Fix operand/output_operands
	thinko.
	* typeck.c (c_expand_asm_operands): Protect from error_mark_node.
testsuite
	* g++.dg/ext/asm3.C: New test.

From-SVN: r57192

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,10 @@
+2002-09-16  Nathan Sidwell  <nathan@codesourcery.com>
+
+	PR c++/7015
+	* semantic.c (finish_asm_stmt): Fix operand/output_operands
+	thinko.
+	* typeck.c (c_expand_asm_operands): Protect from error_mark_node.
+
 2002-09-15  Nathan Sidwell  <nathan@codesourcery.com>
 
 	PR c++/7919
