--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-16  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* g++.dg/ext/asm3.C: New test.
+
 2002-09-16  Richard Earnshaw  <rearnsha@arm.com>
 
 	* objc.dg/bitfield-2.m (dg-options): Add -fsigned-char.
