parse.y (parse_finish_call_expr): Check lookup_member result.
cp:
	* parse.y (parse_finish_call_expr): Check lookup_member result.
testsuite:
	* g++.dg/lookup/scoped2.C: New test.

From-SVN: r57195

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,5 +1,7 @@
 2002-09-16  Nathan Sidwell  <nathan@codesourcery.com>
 
+	* parse.y (parse_finish_call_expr): Check lookup_member result.
+
 	PR c++/7015
 	* semantic.c (finish_asm_stmt): Fix operand/output_operands
 	thinko.
