--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-16  Steve Ellcey  <sje@cup.hp.com>
+
+	* gcc.dg/20020312-2.c: Change __parisc__ to __hppa__.
+
 2002-09-16  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* g++.dg/lookup/scoped2.C: New test.
