gcc/ 	* real.c, real.h: Rewrite from scratch.
	* Makefile.in (simplify-rtx.o): Depend on TREE_H.
	(paranoia): New target.
	* builtins.c (fold_builtin_inf): Use new real.h interface.
	* c-common.c (builtin_define_with_hex_fp_value): Likewise.
	* c-lex.c (interpret_float): Likewise.
	* emit-rtl.c (gen_lowpart_common): Likewise.
	* optabs.c (expand_float): Use real_2expN.
	* config/ia64/ia64.md (divsi3, udivsi3): Likewise.
	* defaults.h (INTEL_EXTENDED_IEEE_FORMAT): New.
	(FLOAT_WORDS_BIG_ENDIAN): New.
	* cse.c (find_comparison_args): Don't pass FLOAT_STORE_FLAG_VALUE
	directly to REAL_VALUE_NEGATIVE.
	* loop.c (canonicalize_condition): Likewise.
	* simplify-rtx.c: Include tree.h.
	(simplify_unary_operation): Don't handle FIX and UNSIGNED_FIX
	with floating-point result modes.
	* toplev.c (backend_init): Call init_real_once.

	* fold-const.c (force_fit_type): Don't call CHECK_FLOAT_VALUE.
	* tree.c (build_real): Likewise.
	* config/alpha/alpha.c, config/vax/vax.c (float_strings,
	float_values, inited_float_values, check_float_value): Remove.
	* config/alpha/alpha.h, config/m68hc11/m68hc11.h,
	config/m88k/m88k.h, config/vax/vax.h (CHECK_FLOAT_VALUE): Remove.
	* doc/tm.texi (CHECK_FLOAT_VALUE): Remove.

gcc/f/
	* target.c (ffetarget_real1): Don't pass FFETARGET_ATOF_
	directly to ffetarget_make_real1.
	(ffetarget_real2): Similarly.
	* target.h (ffetarget_cvt_r1_to_rv_, ffetarget_cvt_rv_to_r2_,
	ffetarget_cvt_r2_to_rv_): Use new real.h interface and simplify.

gcc/java/
	* jcf-parse.c (get_constant): Runtime check for IEEE format;
	use new real.h interface.
	* jcf-write.c (find_constant_index): Use new real.h interface.
	* lex.c (IS_ZERO): Use REAL_VALUES_EQUAL.

contrib/
	* paranoia.cc: New file.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@57198 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/config/ia64/ia64.md
+++ b/gcc/config/ia64/ia64.md
@@ -1990,6 +1990,7 @@
   "INTEL_EXTENDED_IEEE_FORMAT && TARGET_INLINE_DIV"
 {
   rtx op1_tf, op2_tf, op0_tf, op0_di, twon34;
+  REAL_VALUE_TYPE twon34_r;
 
   op0_tf = gen_reg_rtx (TFmode);
   op0_di = gen_reg_rtx (DImode);
@@ -2005,14 +2006,9 @@
   expand_float (op2_tf, operands[2], 0);
 
   /* 2^-34 */
-#if 0
-  twon34 = (CONST_DOUBLE_FROM_REAL_VALUE
-	    (REAL_VALUE_FROM_TARGET_SINGLE (0x2e800000), TFmode));
+  real_2expN (&twon34_r, -34);
+  twon34 = CONST_DOUBLE_FROM_REAL_VALUE (twon34_r, TFmode);
   twon34 = force_reg (TFmode, twon34);
-#else
-  twon34 = gen_reg_rtx (TFmode);
-  convert_move (twon34, force_const_mem (SFmode, CONST_DOUBLE_FROM_REAL_VALUE (REAL_VALUE_FROM_TARGET_SINGLE (0x2e800000), SFmode)), 0);
-#endif
 
   emit_insn (gen_divsi3_internal (op0_tf, op1_tf, op2_tf, twon34));
 
@@ -2051,6 +2047,7 @@
   "INTEL_EXTENDED_IEEE_FORMAT && TARGET_INLINE_DIV"
 {
   rtx op1_tf, op2_tf, op0_tf, op0_di, twon34;
+  REAL_VALUE_TYPE twon34_r;
 
   op0_tf = gen_reg_rtx (TFmode);
   op0_di = gen_reg_rtx (DImode);
@@ -2066,14 +2063,9 @@
   expand_float (op2_tf, operands[2], 1);
 
   /* 2^-34 */
-#if 0
-  twon34 = (CONST_DOUBLE_FROM_REAL_VALUE
-	    (REAL_VALUE_FROM_TARGET_SINGLE (0x2e800000), TFmode));
+  real_2expN (&twon34_r, -34);
+  twon34 = CONST_DOUBLE_FROM_REAL_VALUE (twon34_r, TFmode);
   twon34 = force_reg (TFmode, twon34);
-#else
-  twon34 = gen_reg_rtx (TFmode);
-  convert_move (twon34, force_const_mem (SFmode, CONST_DOUBLE_FROM_REAL_VALUE (REAL_VALUE_FROM_TARGET_SINGLE (0x2e800000), SFmode)), 0);
-#endif
 
   emit_insn (gen_divsi3_internal (op0_tf, op1_tf, op2_tf, twon34));
 
