--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,34 @@
+2002-09-16  Richard Henderson  <rth@redhat.com>
+
+	* real.c, real.h: Rewrite from scratch.
+
+	* Makefile.in (simplify-rtx.o): Depend on TREE_H.
+	(paranoia): New target.
+	* builtins.c (fold_builtin_inf): Use new real.h interface.
+	* c-common.c (builtin_define_with_hex_fp_value): Likewise.
+	* c-lex.c (interpret_float): Likewise.
+	* emit-rtl.c (gen_lowpart_common): Likewise.
+	* optabs.c (expand_float): Use real_2expN.
+	* config/ia64/ia64.md (divsi3, udivsi3): Likewise.
+	* defaults.h (INTEL_EXTENDED_IEEE_FORMAT): New.
+	(FLOAT_WORDS_BIG_ENDIAN): New.
+	* cse.c (find_comparison_args): Don't pass FLOAT_STORE_FLAG_VALUE
+	directly to REAL_VALUE_NEGATIVE.
+	* loop.c (canonicalize_condition): Likewise.
+	* simplify-rtx.c: Include tree.h.
+	(simplify_unary_operation): Don't handle FIX and UNSIGNED_FIX
+	with floating-point result modes.
+	* toplev.c (backend_init): Call init_real_once.
+
+	* fold-const.c (force_fit_type): Don't call CHECK_FLOAT_VALUE.
+	* tree.c (build_real): Likewise.
+	* config/alpha/alpha.c, config/vax/vax.c (float_strings,
+	float_values, inited_float_values, check_float_value): Remove.
+	* config/alpha/alpha.h, config/m68hc11/m68hc11.h,
+	config/m88k/m88k.h, config/vax/vax.h (CHECK_FLOAT_VALUE): Remove.
+	* doc/tm.texi (CHECK_FLOAT_VALUE): Remove.
+	(VAX_HALFWORD_ORDER): Remove.
+
 2002-09-16  Ulrich Weigand  <uweigand@de.ibm.com>
 
 	* config/s390/s390.c: (legitimize_la_operand): Remove, replace by ...
