--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2002-09-16  Richard Henderson  <rth@redhat.com>
 
+	* c-common.c (builtin_define_float_constants): Emit __FOO_DENORM_MIN__.
+
+2002-09-16  Richard Henderson  <rth@redhat.com>
+
 	* real.c, real.h: Rewrite from scratch.
 
 	* Makefile.in (simplify-rtx.o): Depend on TREE_H.
