--- a/gcc/config/m68hc11/m68hc11.md
+++ b/gcc/config/m68hc11/m68hc11.md
@@ -2258,7 +2258,7 @@
      Register X/Y is lost, this is specified by the (clobber) statement.  */
   output_asm_insn (\"ts%3\", operands);
   if (GET_CODE (operands[2]) == CONST_INT
-      && ((val = INTVAL (operands[2]) >= 0 && val < 0x100))
+      && ((val = INTVAL (operands[2])) >= 0 && val < 0x100)
       && dead_register_here (insn, gen_rtx (REG, HImode, HARD_D_REGNUM)))
     {
       output_asm_insn (\"ldab\\t%2\", operands);
