* output.h: Remove #ifdef RTX_CODE and #ifdef TREE_CODE.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@57205 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-16  Hans-Peter Nilsson  <hp@bitrange.com>
+
+	* output.h: Remove #ifdef RTX_CODE and #ifdef TREE_CODE.
+
 2002-09-16  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* m68hc11.md (addhi_sp): Fix uninitialized variable bug.
